traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /demo
