traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 10
      services:
        - name: guestbook-ui
          port: 80
